# PAXOS-demo

./: .gitignore  CMakeLists.txt  config-1.txt  config-2.txt  config-3.txt  main.cpp
src/: node.cpp  node.hpp
